--- a/Sensade.API/appsettings.Development.json
+++ b/Sensade.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SensadeDB": "Host=localhost;Database=SensadeDB;Username=postgres;Password=postgres"
   }
 }
