Parking area controller and repository finished. Exception handling and response codes added.

--- a/Sensade.API/appsettings.json
+++ b/Sensade.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SensadeDB": "Host=;Database=;Username=;Password="
+    "SensadeDB": "Host=;Database=;Port=;Username=;Password="
   }
 }
