--- a/Sensade.DataAccess/Sensade.DataAccess.csproj
+++ b/Sensade.DataAccess/Sensade.DataAccess.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="dbup-postgresql" Version="4.6.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+    <PackageReference Include="Npgsql" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
